// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Expression with all props match snapshot 1`] = `
Array [
  Object {
    "node": "foo",
    "path": "$#Expression.children::0",
    "type": "unit",
    "value": Object {
      "message": Object {
        "text": "foo",
      },
      "messaging_type": "MESSAGE_TAG",
      "notification_type": "SILENT_PUSH",
      "persona_id": "_PERSONA_ID_",
      "tag": "PAYMENT_UPDATE",
    },
  },
  Object {
    "node": <bar />,
    "path": "$#Expression.children::2",
    "type": "unit",
    "value": Object {
      "message": Object {
        "metadata": "_MY_METADATA_",
        "quick_replies": Array [
          Object {
            "content_type": "text",
            "image_url": undefined,
            "payload": undefined,
            "title": "foo",
          },
          Object {
            "content_type": "user_phone_number",
          },
          Object {
            "content_type": "user_email",
          },
        ],
        "text": "bar",
      },
      "messaging_type": "MESSAGE_TAG",
      "notification_type": "SILENT_PUSH",
      "persona_id": "_PERSONA_ID_",
      "tag": "PAYMENT_UPDATE",
    },
  },
]
`;

exports[`Expression with break, pause and thunk in children match snapshot 1`] = `
Array [
  Object {
    "node": "foo",
    "path": "$#Expression.children:0",
    "type": "unit",
    "value": Object {
      "message": Object {
        "text": "foo",
      },
      "messaging_type": undefined,
      "notification_type": undefined,
      "persona_id": undefined,
      "tag": undefined,
    },
  },
  Object {
    "node": "bar",
    "path": "$#Expression.children:2",
    "type": "unit",
    "value": Object {
      "message": Object {
        "text": "bar",
      },
      "messaging_type": undefined,
      "notification_type": undefined,
      "persona_id": undefined,
      "tag": undefined,
    },
  },
  Object {
    "node": <Machinat.Pause
      until={[Function]}
    />,
    "path": "$#Expression.children:3",
    "type": "pause",
    "value": [Function],
  },
  Object {
    "node": "baz",
    "path": "$#Expression.children:4",
    "type": "unit",
    "value": Object {
      "message": Object {
        "metadata": undefined,
        "quick_replies": undefined,
        "text": "baz",
      },
      "messaging_type": undefined,
      "notification_type": undefined,
      "persona_id": undefined,
      "tag": undefined,
    },
  },
  Object {
    "node": <Machinat.Thunk
      effect={[Function]}
    />,
    "path": "$#Expression.children:5",
    "type": "thunk",
    "value": [Function],
  },
]
`;

exports[`Expression with metadata match snapshot 1`] = `
Array [
  Object {
    "node": "foo",
    "path": "$#Expression.children::0",
    "type": "unit",
    "value": Object {
      "message": Object {
        "text": "foo",
      },
      "messaging_type": undefined,
      "notification_type": undefined,
      "persona_id": undefined,
      "tag": undefined,
    },
  },
  Object {
    "node": <bar />,
    "path": "$#Expression.children::2",
    "type": "unit",
    "value": Object {
      "message": Object {
        "metadata": "_SOME_METADATA_",
        "quick_replies": undefined,
        "text": "bar",
      },
      "messaging_type": undefined,
      "notification_type": undefined,
      "persona_id": undefined,
      "tag": undefined,
    },
  },
]
`;

exports[`Expression with notificationType match snapshot 1`] = `
Array [
  Object {
    "node": "foo",
    "path": "$#Expression.children::0",
    "type": "unit",
    "value": Object {
      "message": Object {
        "text": "foo",
      },
      "messaging_type": undefined,
      "notification_type": "NO_PUSH",
      "persona_id": undefined,
      "tag": undefined,
    },
  },
  Object {
    "node": <bar />,
    "path": "$#Expression.children::2",
    "type": "unit",
    "value": Object {
      "message": Object {
        "metadata": undefined,
        "quick_replies": undefined,
        "text": "bar",
      },
      "messaging_type": undefined,
      "notification_type": "NO_PUSH",
      "persona_id": undefined,
      "tag": undefined,
    },
  },
]
`;

exports[`Expression with personaId match snapshot 1`] = `
Array [
  Object {
    "node": "foo",
    "path": "$#Expression.children::0",
    "type": "unit",
    "value": Object {
      "message": Object {
        "text": "foo",
      },
      "messaging_type": undefined,
      "notification_type": undefined,
      "persona_id": "_PERSONA_ID_",
      "tag": undefined,
    },
  },
  Object {
    "node": <bar />,
    "path": "$#Expression.children::2",
    "type": "unit",
    "value": Object {
      "message": Object {
        "metadata": undefined,
        "quick_replies": undefined,
        "text": "bar",
      },
      "messaging_type": undefined,
      "notification_type": undefined,
      "persona_id": "_PERSONA_ID_",
      "tag": undefined,
    },
  },
]
`;

exports[`Expression with quickReplies match snapshot 1`] = `
Array [
  Object {
    "node": "foo",
    "path": "$#Expression.children::0",
    "type": "unit",
    "value": Object {
      "message": Object {
        "text": "foo",
      },
      "messaging_type": undefined,
      "notification_type": undefined,
      "persona_id": undefined,
      "tag": undefined,
    },
  },
  Object {
    "node": <bar />,
    "path": "$#Expression.children::2",
    "type": "unit",
    "value": Object {
      "message": Object {
        "metadata": undefined,
        "quick_replies": Array [
          Object {
            "content_type": "text",
            "image_url": undefined,
            "payload": undefined,
            "title": "foo",
          },
          Object {
            "content_type": "user_phone_number",
          },
          Object {
            "content_type": "user_email",
          },
        ],
        "text": "bar",
      },
      "messaging_type": undefined,
      "notification_type": undefined,
      "persona_id": undefined,
      "tag": undefined,
    },
  },
]
`;

exports[`Expression with type and tag match snapshot 1`] = `
Array [
  Object {
    "node": "foo",
    "path": "$#Expression.children::0",
    "type": "unit",
    "value": Object {
      "message": Object {
        "text": "foo",
      },
      "messaging_type": "MESSAGE_TAG",
      "notification_type": undefined,
      "persona_id": undefined,
      "tag": "COMMUNITY_ALERT",
    },
  },
  Object {
    "node": <bar />,
    "path": "$#Expression.children::2",
    "type": "unit",
    "value": Object {
      "message": Object {
        "metadata": undefined,
        "quick_replies": undefined,
        "text": "bar",
      },
      "messaging_type": "MESSAGE_TAG",
      "notification_type": undefined,
      "persona_id": undefined,
      "tag": "COMMUNITY_ALERT",
    },
  },
]
`;

exports[`Expression with type match snapshot 1`] = `
Array [
  Object {
    "node": "foo",
    "path": "$#Expression.children::0",
    "type": "unit",
    "value": Object {
      "message": Object {
        "text": "foo",
      },
      "messaging_type": "UPDATE",
      "notification_type": undefined,
      "persona_id": undefined,
      "tag": undefined,
    },
  },
  Object {
    "node": <bar />,
    "path": "$#Expression.children::2",
    "type": "unit",
    "value": Object {
      "message": Object {
        "metadata": undefined,
        "quick_replies": undefined,
        "text": "bar",
      },
      "messaging_type": "UPDATE",
      "notification_type": undefined,
      "persona_id": undefined,
      "tag": undefined,
    },
  },
]
`;
